- fixing pending requests - added popup window

--- a/client/ui/index.html
+++ b/client/ui/index.html
@@ -15,6 +15,13 @@
                 <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)"></text>
             </svg>
         </div>
+        <div class="popup">
+            <div class="message">Test MSG</div>
+            <div class="actions">
+                <a href="#">action 1</a>
+                <a href="#">action 2</a>
+            </div>
+        </div>
     </div>
 </body>
 
