--- a/client/ui/index.html
+++ b/client/ui/index.html
@@ -32,6 +32,9 @@
                 <a href="#">action 2</a>
             </div>
         </div>
+        <div class="eye">
+            <div class="icon"><img src="images/eye.png"/></div>
+        </div>
     </div>
 </body>
 
